fix too wide content

--- a/landing-page-media/style.css
+++ b/landing-page-media/style.css
@@ -62,6 +62,10 @@ text-align: center;
   color: #003056;
 }
 
+.pp-section.pp-table {
+  display: block;
+}
+
 .section .pp-tableCell {
   display: flex;
   flex-direction: column;
